--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <!-- p5 lib -->
+  <script language="javascript" type="text/javascript" src="lib/p5.js"></script>
+  <!-- Use p5 game lib -->
   <script src="lib/p5.play.js" type="text/javascript"></script>
 
-  <!-- uncomment lines below to include extra p5 libraries -->
-  <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
-  <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="rahannesGame.js"></script>
+
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
